[package]
name = "mush"
version = "0.1.0"
authors = ["NerdyPepper <akshayoppiliappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = { path = "./rust-mpd", version = "*" }
rustyline = "5.0.2"
toml = "0.5.3"
directories = "2.0.2"
lazy_static = "1.4.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
